{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 21,
  "lineage": "f2f15954-4af7-62b8-22af-18b5f1640810",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:internet-gateway/igw-021174bebc11e27e0",
            "id": "igw-021174bebc11e27e0",
            "owner_id": "794038230522",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "MY_IGW"
            },
            "tags_all": {
              "Name": "MY_IGW"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:route-table/rtb-0c06d1c32f91d5891",
            "id": "rtb-0c06d1c32f91d5891",
            "owner_id": "794038230522",
            "propagating_vgws": [],
            "region": "ap-southeast-7",
            "route": [],
            "tags": {
              "Name": "My private route Table"
            },
            "tags_all": {
              "Name": "My private route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "rtb-0c06d1c32f91d5891",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:route-table/rtb-05574e48a44b91320",
            "id": "rtb-05574e48a44b91320",
            "owner_id": "794038230522",
            "propagating_vgws": [],
            "region": "ap-southeast-7",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021174bebc11e27e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My public route Table"
            },
            "tags_all": {
              "Name": "My public route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "rtb-05574e48a44b91320",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.Loveline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rtb_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085cf01989b673de0",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-0c06d1c32f91d5891",
            "subnet_id": "subnet-0fcdbfc3520812520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.my_private_rtb",
            "aws_subnet.myprivatesubnets",
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0797fe0738aa4c1",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-0c06d1c32f91d5891",
            "subnet_id": "subnet-0c141a8abdaf5dfba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.my_private_rtb",
            "aws_subnet.myprivatesubnets",
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d49d2792ca62ba",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-0c06d1c32f91d5891",
            "subnet_id": "subnet-0b9b4f16e98219168"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.my_private_rtb",
            "aws_subnet.myprivatesubnets",
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rtb_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf2d39c3cfd330b",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-05574e48a44b91320",
            "subnet_id": "subnet-0d946f89a30584620"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.my_public_rtb",
            "aws_subnet.mypublicsubnets",
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbe81ed4be516cfc",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-05574e48a44b91320",
            "subnet_id": "subnet-0d90cf0989a8f2c5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.my_public_rtb",
            "aws_subnet.mypublicsubnets",
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04de560a5ff87813b",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-05574e48a44b91320",
            "subnet_id": "subnet-0d588ce78c8cfd1cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.my_public_rtb",
            "aws_subnet.mypublicsubnets",
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myprivatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-0fcdbfc3520812520",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7a",
            "availability_zone_id": "apse7-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcdbfc3520812520",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "mypri_subnet1"
            },
            "tags_all": {
              "Name": "mypri_subnet1"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-0fcdbfc3520812520",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-0c141a8abdaf5dfba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7c",
            "availability_zone_id": "apse7-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c141a8abdaf5dfba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "mypri_subnet2"
            },
            "tags_all": {
              "Name": "mypri_subnet2"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-0c141a8abdaf5dfba",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-0b9b4f16e98219168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7c",
            "availability_zone_id": "apse7-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9b4f16e98219168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "mypri_subnet3"
            },
            "tags_all": {
              "Name": "mypri_subnet3"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-0b9b4f16e98219168",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mypublicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-0d946f89a30584620",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7a",
            "availability_zone_id": "apse7-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d946f89a30584620",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "mypub_subnet1"
            },
            "tags_all": {
              "Name": "mypub_subnet1"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-0d946f89a30584620",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-0d90cf0989a8f2c5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7c",
            "availability_zone_id": "apse7-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d90cf0989a8f2c5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "mypub_subnet2"
            },
            "tags_all": {
              "Name": "mypub_subnet2"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-0d90cf0989a8f2c5e",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-0d588ce78c8cfd1cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7c",
            "availability_zone_id": "apse7-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d588ce78c8cfd1cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "mypub_subnet3"
            },
            "tags_all": {
              "Name": "mypub_subnet3"
            },
            "vpc_id": "vpc-0631c104f6bd70110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-0d588ce78c8cfd1cc",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.Loveline",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Loveline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:vpc/vpc-0631c104f6bd70110",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c7cb7931d91e8b1",
            "default_route_table_id": "rtb-09e86e8a0163d7f63",
            "default_security_group_id": "sg-0132869a6920a5f5e",
            "dhcp_options_id": "dopt-0033a26adc8acd77d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0631c104f6bd70110",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e86e8a0163d7f63",
            "owner_id": "794038230522",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "Day-3_assignment"
            },
            "tags_all": {
              "Name": "Day-3_assignment"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}